# sdm-database-versions

./: README.md
db_versions/: pyproject.toml
db_versions/db_versions/: main.py
db_versions/db_versions/data/: update_version_json.py  versions.json  versions_db.json
db_versions/db_versions/utils/: github_commit_data.json  mongodb.py  utils.py
