[tool.poetry]
name = "db-versions"
version = "0.1.0"
description = ""
authors = ["feki-rihab <rihab.feki@fiware.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
github-py = "^0.5.0"
pymongo = "^4.6.1"
pygithub = "^2.1.1"
regex = "^2023.12.25"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
